EGR 322 added link to errata on PS#10, problem 6.63

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/08/2018 11:38 am)
+                              >(Last update: 11/09/2018 1:58 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -104,10 +104,13 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		<!-- Note the authors generally use |VBE|=0.7 V, but in
 		a few cases the solutions in Appendix L use 0.6 or 0.65 V -->
-		Note 6.61 continues with part (e) on page 363. <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L7_6P58"
 		>roundoff errors in text's answer to 6.58.</a><br>&nbsp;											   
+		Note 6.61 continues with part (e) on page 363. <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L7_6P63"
+		>errors in text's answer to 6.63.</a><br>&nbsp;											   
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#363"
 		>clarification of Problem D6.64.</a>													   
