EGR 322 errata, added hint and note to errata for Appendix L, answer to 6.63

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -568,12 +568,22 @@ Appendix L, Page L-7, Answer to Problem 6.63.</b><br>
    The answers given do not meet the specifications of the problem 
    statement.  With a little calculation it is clear that the emitter
    current will be out-of-specification for the <i>&beta;</i> = 50 case.
-   Correct answers are:<br>
+   Correct answers are:<br><br>   &nbsp; &nbsp; &nbsp; &nbsp; 
    
-   <i>R<sub>B</i> = 30 k&Omega;, <i>R<sub>C</i> = 4 k&Omega;, 
-   <i>R<sub>E</i> = 4 k&Omega;, <br> (0.919 mA) &le; <i>I<sub>C</sub></i>
-   &le; (1.004 mA) and (&ndash;1.33 V) &le; <i>V<sub>C</sub></i> &le; 
-   (&ndash;0.903 V)<br>
+       <i>R<sub>B</i> = 30 k&Omega;, &nbsp; <i>R<sub>C</i> = 4 k&Omega;, &nbsp; 
+       <i>R<sub>E</i> = 4 k&Omega;, <br> &nbsp; &nbsp; &nbsp; &nbsp;
+	   (0.919 mA) &le; <i>I<sub>C</sub></i> &le; (1.004 mA) &nbsp; and &nbsp; 
+	   (&ndash;1.33 V) &le; <i>V<sub>C</sub></i> &le; (&ndash;0.903 V)<br><br>
+	   
+   <i>Hint: It is not sufficient to solve for the three resistor values
+   and then round all three values.  The emitter current is particularly
+   sensitive to the value of <i>R<sub>E</sub></i>.  After that is rounded
+   it will be necessary to recalculate <i>R<sub>B</sub></i> to reset 
+   the emitter current back to 1 mA for the case of <i>&beta;</i> = 100.</i><br><br>
+   
+   Note:  A case might be made for adjusting <i>R<sub>B</sub></i> as high 
+   as 39 k&Omega;.  All specifications will then be met except that the
+   emitter current for the case of </i>&beta;</i> = 100 will be a bit low.
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 11/09/2018)</small></i><br><br>
             
