--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/09/2018 1:58 am)
+                              >(Last update: 11/09/2018 11:57 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,33 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+11
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/09
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/19<br>at<br>11 pm<br><br>Slide<br>HW<br>under<br>prof<br>
+		DDB's<br>office<br>door.
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Basics of amplification, small sig models<br>&nbsp;
+		Read: 7.1, 7.2                                 <br>&nbsp;
+		                                               <br>&nbsp;
+		Do 7.5, +7.6, +7.25, +*7.33, 7.42, +7.53, *7.58<br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P374"
+		>errata on Equation 7.13</a>                   <br>&nbsp;
+		                                               <br>&nbsp;
+		You may turn this homework in early in class   <br>&nbsp;
+		Monday, 11/19 or later by 11 pm by sliding it  <br>&nbsp;
+		under Prof. De Boer's office door.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 10
