--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -223,13 +223,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/137303517/download?download_frd=1"><!-- -->
 	  11/05<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/137513428/download?download_frd=1"><!-- -->
-      11/07<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      11/09<!-- --</a><!-- --></td>
+      11/07<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/137551262/download?download_frd=1"><!-- -->
+      11/09<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->CBJ breakdown, EBJ breakdown, temperature & &beta;, <b>Ch 7</b> intro., bias<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Problems 6.63, 6.68, 6.69 (No new topics were presented.)<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Faucet video, load line, Q-point, biasing <!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
