--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/09/2018 11:57 am)
+                              >(Last update: 11/12/2018 8:07 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -105,6 +105,9 @@ PS                                                           <BR>
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P374"
 		>errata on Equation 7.13</a>                   <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P480"
+		>errata on Problem 7.5 part (c)</a>            <br>&nbsp;
 		                                               <br>&nbsp;
 		You may turn this homework in early in class   <br>&nbsp;
 		Monday, 11/19 or later by 11 pm by sliding it  <br>&nbsp;
@@ -120,7 +123,7 @@ PS                                                           <BR>
         11/09
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		11/12<!--<a href=
         "https://dordt.instructure.com/files/94616116/download?download_frd=1"
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
