Colorized the "do" list for EGR 322 PS#10

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -100,7 +100,7 @@ PS                                                           <BR>
         Topic: Basics of amplification, small sig models<br>&nbsp;
 		Read: 7.1, 7.2                                 <br>&nbsp;
 		                                               <br>&nbsp;
-		Do 7.5, +7.6, +7.25, +*7.33, 7.42, +7.53, *7.58<br>&nbsp;
+		<DO>Do 7.5, +7.6, +7.25, +*7.33, 7.42, +7.53, *7.58</DO><br>&nbsp;
 		                                               <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P374"
