EGR 322 daily slides and solution key for PS#10

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -234,14 +234,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/137660464/download?download_frd=1"><!-- -->
-	  11/12<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      11/14<!-- --</a><!-- --><br><!-- --<a href=
+	  11/12<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/137757521/download?download_frd=1"><!-- -->
+      11/14<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/16<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Small-signal modeling, a slide from Lab#8, MOSFET amplifier<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Overview of sm-sig analysis, example of sm-sig., pi vs. tee model, Early mdl<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #2</font><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
