--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/12/2018 8:07 pm)
+                              >(Last update: 11/14/2018 3:11 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -123,9 +123,9 @@ PS                                                           <BR>
         11/09
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		11/12<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/137759873/download?download_frd=1"
+        >11/12</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: BJT DC circuits, secondary effects      <br>&nbsp;
 		Read: 6.3, 6.4                                 <br>&nbsp;
