--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -245,15 +245,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #2</font><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/19<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/138029647/download?download_frd=1"><!-- -->
+	  11/19<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       11/21<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/23<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Discussion of Problems 7.5, 7.53, Lab #9<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</fon<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
