EGR 322 slide index, add the monday thanksgiving break day

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -230,7 +230,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->CBJ breakdown, EBJ breakdown, temperature & &beta;, <b>Ch 7</b> intro., bias<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Problems 6.63, 6.68, 6.69 (No new topics were presented.)<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Faucet video, load line, Q-point, biasing <!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 11/12------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/137660464/download?download_frd=1"><!-- -->
@@ -243,7 +243,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Small-signal modeling, a slide from Lab#8, MOSFET amplifier<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Overview of sm-sig analysis, example of sm-sig., pi vs. tee model, Early mdl<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #2</font><!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 11/19------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/138029647/download?download_frd=1"><!-- -->
@@ -255,8 +255,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Discussion of Problems 7.5, 7.53, Lab #9<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</fon<!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--></td>  
+   </TR><!-- Week of 11/26------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
@@ -266,10 +266,10 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/30<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 12/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
@@ -282,7 +282,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 12/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
