spelling correction textbook requisitions

--- a/S19/170/170S19_Textbook_Requisitions.htm
+++ b/S19/170/170S19_Textbook_Requisitions.htm
@@ -102,7 +102,7 @@ International editions of the textbooks will not be supported by the instructor.
 Neither of the textbooks required for this course require access codes to Web pages or CD disks.<br><br>
 
 <b>PAPERBACK EDITIONS RECOMMEMDED</b><br>
-The ISBN numbers provided above are for paperback editions.  In Professor DDB's experience these paperback editions are of good construction.  There is no practical advantage to purchasing theses in hard covers.  This remark does not necessarily apply to other courses Professor DDB instructs. <br><br>
+The ISBN numbers provided above are for paperback editions.  In Professor DDB's experience these paperback editions are of good construction.  There is no practical advantage to purchasing these in hard covers.  This remark does not necessarily apply to other courses Professor DDB instructs. <br><br>
 
 <b>NCEES-approved CALCULATOR OPTIONAL</b><br>
 Routinely using a calculator that you can take with you to the Fundamentals of Engineering Exam will improve your performance on the exam.  In this course a calculator that can handle complex arithmetic and number base conversions is helpful.  
