Added errata for Sedra Smith 7 page 489, problem 7.58 and fixed a typo in index.html

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 11/09/2018)<br> 
+                    (last update 11/27/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -323,11 +323,23 @@ Page 345, Problem D5.111 part (d).</b><br>
                       <br> &nbsp; &nbsp; &nbsp &nbsp; <small><i>
          (Posted, 12/04/2010.)              </i></small><br><br> -->
 
+                                      <A NAME="P489_7p58"></A><b>
+Page 489, Problem D7.58.</b><br>
+   Be sure to look at the text below Figure P7.58.  The problem
+   statement continues there. <small><blockquote>
+   
+      The layout on the page of Figure P7.58 confusingly 
+	  interrupts the problem statement.  Figure P7.58 should be 
+	  moved down below the end of the problem statement and just 
+	  above the heading "Section 7.3: Basic Configurations."
+	            </blockquote></small> &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 11/27/2016)</small></i><br><br>
+   
                                            <A NAME="P489"></A><b>
 Page 489, Problem D7.60 Part (a).</b><br>
    Change, "signal strength" to "signal voltage." <br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
-   <i><small>(Posted 8/17/2016)</small></i><br><br>
+   <i><small>(Posted 8/17/2018)</small></i><br><br>
    
          
                                            <A NAME="P498"></A><b>
