--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ EGR 380, Senior Design Project (S96) -->
      * Links to Prof. De Boer's most recent past web site for the course.<BR>
      From there you can find a link to the course syllabus, <br>
 	 a link to older offerings of the course, and more. <br>A more complete list 
-	 courses taught in the past by Professor De Boer can be found <a href=
+	 of courses taught in the past by Professor De Boer can be found <a href=
 	 "ddb_courses.html">here</a></small></Blockquote> 
 
 
