--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -260,14 +260,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/26<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      11/28<!-- --</a><!-- --><br><!-- --<a href=
+	  11/26<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/138377370/download?download_frd=1"><!-- -->
+      11/28<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/30<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Three amp configurations, Characterizing an amp via Thevenin-like model<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 12/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
