--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/14/2018 3:11 pm)
+                              >(Last update: 11/28/2018 2:42 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,24 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/28
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/30
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Amplifier configurations                <br>&nbsp;
+		Read: 7.3 through page 431                     <br>&nbsp;
+		                                           <br>&nbsp;<DO>
+		Do +7.59, +7.68                                     </DO>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
 11
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -94,8 +112,9 @@ PS                                                           <BR>
 		DDB's<br>office<br>door.
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp
-		
+		<a href=
+        "https://dordt.instructure.com/files/138377741/download?download_frd=1"
+        >11/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Basics of amplification, small sig models<br>&nbsp;
 		Read: 7.1, 7.2                                 <br>&nbsp;
@@ -108,6 +127,9 @@ PS                                                           <BR>
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P480"
 		>errata on Problem 7.5 part (c)</a>            <br>&nbsp;
+		Note <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P489_7p58"
+		>errata on Problem 7.58</a>.                   <br>&nbsp;
 		                                               <br>&nbsp;
 		You may turn this homework in early in class   <br>&nbsp;
 		Monday, 11/19 or later by 11 pm by sliding it  <br>&nbsp;
