--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -262,13 +262,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  11/26<!-- --</a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/138377370/download?download_frd=1"><!-- -->
-      11/28<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      11/30<!-- --</a><!-- --></td>
+      11/28<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/138510691/download?download_frd=1"><!-- -->
+      11/30<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Thanksgiving Break, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Three amp configurations, Characterizing an amp via Thevenin-like model<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Common source, emitter, cathode details without and with degeneration<!--end comment--></td>  
    </TR><!-- Week of 12/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
