--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,8 +53,8 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/28/2018 4:41 pm)
-<!-- ------------------------------------------- ---------- -->
+                              >(Last update: 11/30/2018 3:14 pm)
+<!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
 
@@ -82,6 +82,24 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/30
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        12/07
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Amplifier configurations, biasing       <br>&nbsp;
+		Read: 7.3.4 (page 431) through 7.4 (page 466)  <br>&nbsp;
+		                                           <br>&nbsp;<DO>
+		Do +7.78, D7.83, +D7.92, D7.105                     </DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 12
