EGR 322 daily slides and PS#12 solutions posted

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/30/2018 3:14 pm)
+                              >(Last update: 12/03/2018 5:16 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -111,8 +111,9 @@ PS                                                           <BR>
         11/30
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp
-		
+		<a href=
+        "https://dordt.instructure.com/files/138645916/download?download_frd=1"
+        >12/03</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Amplifier configurations                <br>&nbsp;
 		Read: 7.3 through page 431                     <br>&nbsp;
@@ -406,7 +407,7 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Toppics: Op-amp configurations (inverting, sum,<br>&nbsp;
+        Topics: Op-amp configurations (inverting, sum,<br>&nbsp;
 		etc.), differential and instrumentation amps.  <br>&nbsp;
 		Read Chapter 2 Sections 2.1 through 2.4        <br>&nbsp;
 													   <br>&nbsp;
@@ -519,7 +520,7 @@ found on page 11, and Ex1.5 is not the assigned problem).
 Note 3)
                                                         </TD><TD>
 A "+" mark in front of the problem number means an answer
-is given at the end of the text, in <a href=
+is provided in an online supplement to the textbook, in <a href=
 "http://global.oup.com/us/companion.websites/fdscontent/uscompanion/us/static/companion.websites/9780199339136/pdf/appendix_L.pdf"
 >Appendix L</a>.  Also available on Canvas, <a href=
 "https://dordt.instructure.com/files/129457884/download?download_frd=1"
@@ -528,10 +529,10 @@ is given at the end of the text, in <a href=
                          <BR><BR><TR><TD width="60" valign="top">
 Note 4) 
                                                         </TD><TD>
-The letter "D" in front of a problem number indicates a design 
-oriented problem.  The student may need to use some judgement in 
-understanding what the problem statement is requesting.  (Ask 
-Prof. De Boer if you are in doubt.) 
+The letter "D" in front of a problem number indicates a 
+design-oriented problem.  The student may need to use some 
+judgement in understanding what the problem statement is 
+requesting.  (Ask Prof. De Boer if you are in doubt.) 
 
                          <BR><BR><TR><TD width="60" valign="top">
 Note 5) 
@@ -569,9 +570,9 @@ Note 9)
 If a link brings you to a login page use your Dordt College 
 network username and password.  If this brings you to the opening
 page of Canvas@dordt instead of the resource you wanted, click
-your browser's back arrow twice to return to the link on this 
-page, then click the link again.  Now that you are signed in the
-link will work properly.                                   
+your browser's back arrow as many times as needed to return to 
+the link on this page, then click the link again.  Now that you 
+are signed in the link will work properly.                                   
 
                                    <br><br><br><br></P></TD></TR>
 </TABLE>
