--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -272,14 +272,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 12/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+	  "https://dordt.instructure.com/files/138644370/download?download_frd=1"><!-- -->
 	  12/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       12/05<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       12/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Problem D7.83, Details of common-gate, common-base<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 12/10------------------------------------------------------------------ --><TR>
