Fixed a broken link

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -271,9 +271,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Common source, emitter, cathode details without and with degeneration<!--end comment--></td>  
    </TR><!-- Week of 12/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/138644370/download?download_frd=1"><!-- -->
-	  12/03<!-- --</a><!-- --><br><!-- --<a href=
+	  12/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       12/05<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
