Posted errata, Sedra & Smith, Problem 7.118

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 11/27/2018)<br> 
+                    (last update 12/05/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -340,6 +340,22 @@ Page 489, Problem D7.60 Part (a).</b><br>
    Change, "signal strength" to "signal voltage." <br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 8/17/2018)</small></i><br><br>
+   
+         
+   
+                                           <A NAME="P497"></A><b>
+Page 497, Problem 7.118 Part (a).</b><br>
+   Change, part (a) of the problem statement to:<br><br>
+   (a)  Neglecting Early effect, if the MOSFET is operating<br>
+                                           &nbsp; &nbsp; &nbsp;
+        in saturation with <i>I<sub>D</sub></i> = 0.5 mA and 
+		<i>V<sub>ov</sub></i> = 0.3 V,<br>
+                                           &nbsp; &nbsp; &nbsp;
+		what must the MOSFET's <i>k<sub>n</sub></i> be?  What 
+		is the DC  <br>
+                                           &nbsp; &nbsp; &nbsp;
+		voltage at the drain?<br><br>
+   <i><small>(Posted 12/05/2018)</small></i><br><br>
    
          
                                            <A NAME="P498"></A><b>
