EGR 322 Update to PS#13, daily slides, update to errata, Prob. 7.118

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -332,8 +332,8 @@ Page 489, Problem D7.58.</b><br>
 	  interrupts the problem statement.  Figure P7.58 should be 
 	  moved down below the end of the problem statement and just 
 	  above the heading "Section 7.3: Basic Configurations."
-	            </blockquote></small> &nbsp; &nbsp; &nbsp; &nbsp; 
-   <i><small>(Posted 11/27/2016)</small></i><br><br>
+	  <i>(Posted 11/27/2016)</i>
+	           </blockquote></small>
    
                                            <A NAME="P489"></A><b>
 Page 489, Problem D7.60 Part (a).</b><br>
@@ -347,15 +347,21 @@ Page 489, Problem D7.60 Part (a).</b><br>
 Page 497, Problem 7.118 Part (a).</b><br>
    Change, part (a) of the problem statement to:<br><br>
    (a)  Neglecting Early effect, if the MOSFET is operating<br>
-                                           &nbsp; &nbsp; &nbsp;
+                                            &nbsp; &nbsp; &nbsp;
         in saturation with <i>I<sub>D</sub></i> = 0.5 mA and 
 		<i>V<sub>ov</sub></i> = 0.3 V,<br>
-                                           &nbsp; &nbsp; &nbsp;
+                                            &nbsp; &nbsp; &nbsp;
 		what must the MOSFET's <i>k<sub>n</sub></i> be?  What 
 		is the DC  <br>
-                                           &nbsp; &nbsp; &nbsp;
-		voltage at the drain?<br><br>
-   <i><small>(Posted 12/05/2018)</small></i><br><br>
+                                            &nbsp; &nbsp; &nbsp;
+		voltage at the drain?                <small><blockquote>
+		
+		  The one cannot &quot;verify&quot; the operating point
+		  without first knowing <i>k<sub>n</sub></i>.<br>
+		  The author intends for <i>k<sub>n</sub></i> to be 
+		  &quot;found.&quot;		&nbsp; &nbsp; &nbsp; &nbsp; 
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+        <i>(Posted 12/05/2018)</i></blockquote></small>
    
          
                                            <A NAME="P498"></A><b>
@@ -411,8 +417,8 @@ Page 588, Problem 8.78.</b><br>
    In the equation for <i>A<sub>v</sub></i> change the "equals" 
    sign (=) to an "approximately equal" (&#8776) sign. 
    &nbsp; &nbsp; &nbsp; &nbsp; 
-   <i><small>(Posted 8/17/2016)</small></i><br><br>
-      
+   <i><small>(Posted 8/17/2016)</small></i><br>
+   
 <!-- Can't find this in the 7th            <A NAME="P668"></A><b>
 Page 668, Problem 8.11.</b><br>
    Change "<i>v<sub>id</sub></i> = <i>v</i><sub><i>G</i>2</sub> 
