--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -273,14 +273,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/138644370/download?download_frd=1"><!-- -->
-	  12/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      12/05<!-- --</a><!-- --><br><!-- --<a href=
+	  12/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/138786166/download?download_frd=1"><!-- -->
+      12/05<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       12/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Problem D7.83, Details of common-gate, common-base<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Details of follower amps (com. drain, collector); unilatral ccts; reflection<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 12/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
