--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/03/2018 5:16 pm)
+                              >(Last update: 12/05/2018 3:39 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,29 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+14
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        12/05
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        12/12
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Biasing, discrete-circuit amplifiers    <br>&nbsp;
+		Review 7.4, Read 7.5
+		                                           <br>&nbsp;<DO>
+		Do +D7.92, D7.105, +7.118, +7.134         </DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P497"
+		>errata on Problem 7.118</a>
+
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
 13
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -99,7 +122,11 @@ PS                                                           <BR>
         Topic: Amplifier configurations, biasing       <br>&nbsp;
 		Read: 7.3.4 (page 431) through 7.4 (page 466)  <br>&nbsp;
 		                                           <br>&nbsp;<DO>
-		Do +7.78, D7.83, +D7.92, D7.105                     </DO>
+		Do +7.78, D7.83                           </DO><br>&nbsp;<small>
+													   <br>&nbsp;
+		Note:  On Wednesday, 12/05 Problems +D7.92 and <br>&nbsp;
+		D7.105 were moved from this assignment to the  <br>&nbsp;
+        next one.                                               </small>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 12
