Changed EGR 170 matlab book back to the 4th edition.

--- a/S19/170/170S19_Textbook_Requisitions.htm
+++ b/S19/170/170S19_Textbook_Requisitions.htm
@@ -49,13 +49,13 @@ This information does not apply to that section of the course.</small>
 <tr>
 <td>Required</td>
 <td align="center"><a href=
-"https://www.elsevier.com/books/matlab/attaway/978-0-12-815479-3"
-><img src="Attaway_MatLAB_Cover_9780128154793_small.jpg"></a></td>
+"https://www.elsevier.com/books/matlab/attaway/978-0-12-804525-1"
+><img src="Attaway4_MatLAB_Cover_9780128045251_small.png"></a></td>
 <td>Stormy Attaway, </td>
-<td>Matlab: A Practical Introduction to Programming and Problem Solveing, 5th Edition &nbsp; &nbsp;</td>
-<td>978-0-12-815479-3</td>
+<td>Matlab: A Practical Introduction to Programming and Problem Solving, 4th Edition &nbsp; &nbsp;</td>
+<td>978-0-12-804525-1</td>
 <td>Butterworth-Heinemann, an imprint of Elsevier</td>
-<td>5</td>
+<td>4</td>
 </tr>
 <tr>
 <td>Required</td>
@@ -90,26 +90,35 @@ This information does not apply to that section of the course.</small>
 <table width="512" align="left"><tr><td width="100%">
 <br><br>
 <b><u>Comments</u>:</b><p>
-<b>DO NOT GET THE WRONG BOOK</B><br>
+<b>PROFESSOR DE BOER IS AWARE OF THE 5th EDITION</B><br>
+<a href="https://www.elsevier.com/books/matlab/attaway/978-0-12-815479-3"><img src="Attaway_MatLAB_Cover_9780128154793_small.jpg"></a>&nbsp;ISBN 978-0-12-815479-3<br>
 
-<img src="Attaway4_MatLAB_Cover_9780128045251_small.png"><br>
-The fourth edition is the wrong book for this section.  Does the pattern on the cover of the book touch the edges of the cover?  That's the wrong book!<br><br>
+A newer (5<sup>th</sup>) edition of the Matlab textbook is available.  For various reasons, including lower cost of used books for the 4th edition, the engineering department has decided to stick with the 4th edition as the official requirement for this spring semester.  If you prefer to use the 5th edition, you may do so in professor De Boer's section, Section 02.  Professor De Boer will teach the course in such a way that both the 4th and the 5th editions will be well supported.<br><br>
 
 <b>INTERNATIONAL EDITIONS NOT SUPPORTED</b><br>
 International editions of the textbooks will not be supported by the instructor.  Often the vender assures that an international edition is interchangeable with the domestic edition.  It has <i>never</i> worked that way in Professor DDB's experience.<br><br>
 
 <b>CDs, ACCESS CODES NOT NEEDED</b><br>
-Neither of the textbooks required for this course require access codes to Web pages or CD disks.<br><br>
+None of the textbooks required for this course require CD disks or access codes to Web pages. Exception: If you order an electronic edition of the textbook you may require an access code to that product.<br><br>
 
 <b>PAPERBACK EDITIONS RECOMMEMDED</b><br>
 The ISBN numbers provided above are for paperback editions.  In Professor DDB's experience these paperback editions are of good construction.  There is no practical advantage to purchasing these in hard covers.  This remark does not necessarily apply to other courses Professor DDB instructs. <br><br>
 
+<b>ELECTRONIC EDITIONS OPTIONAL</B><BR>
+If you prefer an electronic edition of either or both of the textbooks for this course, this will be acceptable in Professor De Boer's section, Section 02, in place of a paperback edition.  Be sure you have the correct edition of the textbook. The 3rd editions and earlier are not supported in any format.  The ISBN's of the electronic editions are:<br><br>
+
+Attaway, <i>Matlab 4th Ed.</i>, ISBN 978-0-12-804541-1<br>
+or<br>
+Attaway, <i>Matlab 5th Ed.</i>, ISBN 978-0-12-816345-0<br><br>
+Essick, <i>LabVIEW 4th Ed.</i>, ISBN (unknown)<br>e-book may not be available on all platforms<br><br>
+
+
 <b>NCEES-approved CALCULATOR OPTIONAL</b><br>
-Routinely using a calculator that you can take with you to the Fundamentals of Engineering Exam will improve your performance on the exam.  In this course a calculator that can handle complex arithmetic and number base conversions is helpful.  
+Routinely using a calculator that you can take with you to the Fundamentals of Engineering Exam will improve your performance on that exam.  In this course a calculator that can handle complex arithmetic and number base conversions is helpful.  
 The approved list can be found here: <a href="http://ncees.org/exams/calculator/">http://ncees.org/exams/calculator/</a> Not all calculators on this list can do complex arithmetic and base conversions, but the <a href="https://education.ti.com/en/products/calculators/scientific-calculators/ti-36x-pro">TI-36X-Pro</a> model can and is the choice of most engineering students at Dordt College. <br><br>
 
-<b>TEXTBOOK WEB SITES</b><br>
-FYI these textbooks have accompanying web sites.  Click above on one of the cover photos to view the publisher's web site for the book.<br><br>
+<b>WEB SITES</b><br>
+FYI these textbooks and the TI 36X-Pro calculator have accompanying web sites.  Click on a photo above to view the associated product web site.<br><br>
 
 
 
