--- a/Texts.htm
+++ b/Texts.htm
@@ -60,7 +60,7 @@
    Engineering Programming for Instrumentation and Automation</a></td></tr><tr>
    <td width="221">
    <a href="S19/170/170S19_Textbook_Requisitions.htm">
-   <img src="S19/170/Attaway_MatLAB_Cover_9780128154793_small.jpg" style="border-style: none"/>
+   <img src="S19/170/Attaway4_MatLAB_Cover_9780128045251_small.png" style="border-style: none"/>
    <img src="S19/170/Essick_LabVIEW_Text_Cover_9780190853068_small.jpg" style="border-style: none"/></a></td>
    <td valign="top"><br><br>
    The information linked here<br> only applies to Section 02. </td>
