--- a/CV.HTM
+++ b/CV.HTM
@@ -148,7 +148,7 @@
 			
         Partial retirement, teaching only one or two courses per semester<br>
 		<i>August 2017 through present</i><br>
-		<i>Full retirment planned for August, 2021</i><br>    
+		<i>Full retirement planned for August, 2021</i><br>    
             <BR><BR></DIV>
     </TD>
 </TR>
@@ -404,7 +404,7 @@
 		I can use my engineering talent to bring healing and peace 
 		to our broken world, to witness to others through my work, 
 		and at the same time, the Lord graciously provides for 
-		all my my other needs, including a community of family 
+		all my other needs, including a community of family 
 		and friends around me and a salary to live on.</P> 
 
         <P>In the early 1980's I worked in the engineering 
@@ -541,8 +541,11 @@
 		professional lives.</P> 
 
         <P>In 1998 I married Marge.  She grew up in Grand Rapids 
-        Michigan and went to the same high school I did, <A 
+        Michigan and went to the same high school I did, <!-- 
+		<broken link discovered 181209><A 
         HREF="http://www.grcs.org/NetCommunity/Page.aspx?pid=1260" 
+        target="_blank"> --><A 
+        HREF="https://www.grcs.org/academics/schools/grchs" 
         target="_blank">Grand Rapids Christian High School</A>, 
 		although we did not know each other then.  After high 
 		school Marge went to Dordt College (I went to Calvin College). 
@@ -550,8 +553,8 @@
 		children with him, Lori, Glenn, Keith, and Lisa.  They all 
 		graduated from <a href=
 		"http://westernchristianhs.com/" target="_blank"> 
-		Western Christian High School</a> in Hull, Iowa, and 
-		are now married.  Lori and Lisa continued their studies 
+		Western Christian High School</a> in Hull, Iowa.  Lori and 
+		Lisa continued their studies 
 		in Nursing at Calvin College in Grand Rapids Michigan. 
 		Lori is a school nurse for a public school in Michigan.  
 		Lisa is a nurse at a hospital in Grand Rapids.  
@@ -559,8 +562,9 @@
 		College and transferred to Bellview University to get a 
 		degree in Criminal Justice.  Glenn went directly from 
 		high school to work.  Both Keith and Glenn now work at the 
-		Doon Elevator in Doon Iowa.  In addition to our children, 
-		there are 12 grandchildren on Marge's side of our family.  
+		Doon Elevator in Doon Iowa.  All four of them have found
+		spouses and are married.  There are 12 grandchildren on 
+		Marge's side of our family.  
 		
 		<p>Marge lost her first husband to a heart attack in 1994.  
 		Later, in 1997 about a year after Susan had died, Marge 
@@ -573,7 +577,7 @@
         "http://www.unity.pvt.k12.ia.us/" target="_blank"
         >Unity Christian High School</A> in Orange City Iowa and 
         of Dordt College and both are married.  Naomi also has 
-		masters degree in fine arts from Iowa State University.  
+		a masters degree in fine arts from Iowa State University.  
 		She now does artwork on commission (see her <a href=
 		"http://www.naomifriend.com" target="_blank">website</a>), 
 		and with her husband <a href=
@@ -587,14 +591,15 @@
 		South Dakota School of Mines and Technology in Rapid 
 		City.  Kim also has a <a href=
         "http://kimberlycdeboer.blogspot.com/" target="_blank"
-        >blog</a>.  
+        >blog</a>.  We have one more grandchild on Doug's side 
+		of the family.  
 		
 		<p>I am getting close to retirement age now.  Through a 
 		"Retirement Incentive" agreement I have made with Dordt 
 		College I am now reducing my time commitment to Dordt College
 		to half-time.  I have no plans to retire completely from 
 		engineering however.  I am now in a transition phase from 
-		Dordt College to whatever new engineering opportunites I 
+		Dordt College to whatever new engineering opportunities I 
 		find to glorify God in the future.  I'm not only 
 		considering volunteer opportunities, but certainly I am 
 		aware of more volunteer opportunities for engineers than 
@@ -746,7 +751,7 @@
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         (This page last updated on 10/26/2018)</DIV>
+         <small>(This page last updated on 12/09/2018)</small></DIV>
     </TD>
 </TR>
 
