--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/05/2018 3:39 pm)
+                              >(Last update: 12/10/2018 8:46 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -116,7 +116,9 @@ PS                                                           <BR>
         12/07
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp
+		<a href=
+        "https://dordt.instructure.com/files/139076331/download?download_frd=1"
+        >12/10</a><br>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Amplifier configurations, biasing       <br>&nbsp;
