--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/10/2018 8:46 am)
+                              >(Last update: 12/12/2018 2:47 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -103,8 +103,12 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P497"
-		>errata on Problem 7.118</a>
-
+		>errata on Problem 7.118</a>                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Optional but recommended:  Review all course   <br>&nbsp;
+		content.  Send e-mail ASAP to Prof. De Boer to <br>&nbsp;
+		request review of particular subjects during   <br>&nbsp;
+		Wednesday's class (12/12).
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 13
