Added Oxford's academic discount to the textbook requisition info

--- a/S19/170/170S19_Textbook_Requisitions.htm
+++ b/S19/170/170S19_Textbook_Requisitions.htm
@@ -90,6 +90,9 @@ This information does not apply to that section of the course.</small>
 <table width="512" align="left"><tr><td width="100%">
 <br><br>
 <b><u>Comments</u>:</b><p>
+<b>DISCOUNT AVAILABLE</b><br>
+Oxford University Press offers an academic discount of 20% if you order online from them. That should bring the cost of Essick's book to about $40 plus shipping for a new paperback.  Contact Professor De Boer by e-mail for details on how to obtain this discount.  (This discount is available only for students enrolling in EGR 170-01 or EGR 170-02 at Dordt College.  If you are attending another university, contact your professor and ask your professor to ask Oxford for a discount code for your classes.)<br><br>
+
 <b>PROFESSOR DE BOER IS AWARE OF THE 5th EDITION</B><br>
 <a href="https://www.elsevier.com/books/matlab/attaway/978-0-12-815479-3"><img src="Attaway_MatLAB_Cover_9780128154793_small.jpg"></a>&nbsp;ISBN 978-0-12-815479-3<br>
 
