--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/14/2018 10:09 pm)
+                              >(Last update: 12/15/2018 10:49 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -93,8 +93,9 @@ PS                                                           <BR>
         12/12
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        12/15
-		
+		<a href=
+        "https://dordt.instructure.com/files/139490574/download?download_frd=1"
+        >12/15</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Biasing, discrete-circuit amplifiers    <br>&nbsp;
 		Review 7.4, Read 7.5
@@ -123,8 +124,7 @@ PS                                                           <BR>
 		<a href=
         "https://dordt.instructure.com/files/139076331/download?download_frd=1"
         >12/10</a><br>
-		
-   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+	   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Amplifier configurations, biasing       <br>&nbsp;
 		Read: 7.3.4 (page 431) through 7.4 (page 466)  <br>&nbsp;
 		                                           <br>&nbsp;<DO>
